src/v3/src/components/Widget/style.module.css
/*! CSS Used from: Embedded */
:global(.bgStyle) {
  background-image: none;
}
/*! CSS Used from: https://op3static.oktacdn.com/assets/js/sdk/okta-signin-widget/7.3.1/css/okta-sign-in.min.css */
:global(.clearfix) {
  display: block;
}
:global(.clearfix:after,
.clearfix:before) {
  display: block;
  block-size: 0;
  clear: both;
  content: ".";
  visibility: hidden;
}
:global(.hide) {
  display: none;
}
:global(.auth .content) {
  min-block-size: 100%;
  min-inline-size: 300px;
  display: inline-block;
  inline-size: 100%;
}
:global(.auth .content:after) {
  content: "";
  display: block;
  block-size: 30px;
}
:global(.auth .footer) {
  background-color: #fff;
  min-inline-size: 300px;
  position: absolute;
  font-size: 12px;
  inset-inline: 0;
  inset-block-end: 0;
  block-size: 34px;
  overflow: hidden;
}
:global(.auth .footer .footer-container) {
  padding-block: 9px;
  padding-inline: 80px;
  margin-block: 0;
  margin-inline: auto;
  box-sizing: border-box;
}
@media only screen and (max-width: 560px) {
  :global(.auth .footer .footer-container) {
    inline-size: 400px;
    padding-inline: 20px;
  }
}
@media only screen and (max-width: 400px) {
  :global(.auth .footer .footer-container) {
    inline-size: 100%;
  }
}
:global(.auth .footer a) {
  color: #6e6e78;
}
:global(.auth .footer a:active,
.auth .footer a:link,
.auth .footer a:visited) {
  text-decoration: none;
  color: #6e6e78;
}
:global(.auth .footer a:focus,
.auth .footer a:hover) {
  text-decoration: underline;
  color: #6e6e78;
}
:global(.auth .footer .copyright) {
  float: inline-start;
  color: #111;
}
:global(.auth .footer .copyright a) {
  color: #111;
}
:global(.auth .footer .privacy-policy) {
  float: inline-end;
}
:global(.login-bg-image) {
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: cover;
  position: fixed;
  inset: 0;
  z-index: -5;
}
:global(.okta-container .applogin-banner) {
  position: relative;
  margin-block-end: 10px;
  min-inline-size: 300px;
}
:global(.okta-container .applogin-banner .applogin-background) {
  background-color: #fff;
  opacity: 0.9;
  position: absolute;
  inset: 0;
  box-shadow: 0 0 2px 1px hsla(0, 0%, 68.6%, 0.3);
}
:global(.okta-container .applogin-banner .applogin-container) {
  position: relative;
  inline-size: 400px;
  min-inline-size: 300px;
  margin-block: 0;
  margin-inline: auto;
  padding-block: 20px;
  padding-inline: 0;
  box-sizing: border-box;
  text-align: center;
}
:global(.okta-container .applogin-banner .applogin-container p) {
  color: #111;
}
@media only screen and (max-width: 400px) {
  :global(.okta-container .applogin-banner .applogin-container) {
    inline-size: 100%;
  }
}
@media only screen and (max-height: 750px) {
  :global(.okta-container .applogin-banner .applogin-container) {
    padding-block: 10px;
    padding-inline: 0;
  }
}
@media only screen and (max-height: 660px) {
  :global(.okta-container .applogin-banner .applogin-container) {
    padding-block: 5px;
    padding-inline: 0;
  }
}
:global(.okta-container .applogin-banner .applogin-container h1) {
  font-size: 24px;
  font-weight: lighter;
  line-height: 26px;
}
@media only screen and (max-height: 660px) {
  :global(.okta-container .applogin-banner .applogin-container p) {
    display: none;
  }
}
:global(.okta-container .applogin-banner .applogin-app-logo) {
  display: inline-block;
  vertical-align: middle;
  margin-inline-start: 5px;
}
:global(.okta-container .applogin-banner .applogin-app-logo img) {
  max-block-size: 26px;
}
@media only screen and (max-width: 600px) {
  :global(.login-bg-image) {
    background-image: none !important;
    background-color: #fff !important;
    -webkit-filter: unset !important;
    filter: unset !important;
  }
}

